particle system change to support https://github.com/squarefeet/ShaderParticleEngine

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "voxel-player": "0.1.0",
         "voxel-creature": "0.1.0",
         "voxel-critter": "git://github.com/seacloud9/voxel-critter.git",
-        "voxel-pp": "git://github.com/seacloud9/voxel-pp.git"
+        "voxel-pp": "git://github.com/seacloud9/voxel-pp.git",
+        "ShaderParticleEngine": "git://github.com/squarefeet/ShaderParticleEngine.git"
     },
     "devDependencies": {
         "browservefy": "0.0.10"
